[package]
name = "horacle"
version = "1.0.0"
description = "ChatGPT Cross Platform Tray Application"
authors = ["levarr"]
license = "MIT"
repository = ""
edition = "2021"


[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["macos-private-api", "shell-open", "system-tray"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tauri-plugin-positioner = "1.0"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
